force-app/main/default/objects/System_Monitoring__c/System_Monitoring__c.object-meta.xml
<CustomObject>
    <label>System Monitoring Log</label>
    <nameField>
        <displayFormat>SM-{0000000000}</displayFormat>
        <label>System Monitoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Monitoring Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>