force-app/main/default/objects/System_Monitoring__c/fields/Monitoring_Type__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Type__c</fullName>
    <label>Monitoring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts - Available Credit</fullName>
            </value>
            <value>
                <fullName>Accounts - Max Loan Approved</fullName>
            </value>
            <value>
                <fullName>Accounts - Principle</fullName>
            </value>
            <value>
                <fullName>Accounts - Total Interest</fullName>
            </value>
            <value>
                <fullName>Accounts - Total Outstanding Balance</fullName>
            </value>
            <value>
                <fullName>Drawdowns - Admin Fee</fullName>
            </value>
            <value>
                <fullName>Opportunity - Stage/Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>