force-app/main/default/objects/System_Monitoring__c/fields/Report_Result_Summary__c.field-meta.xml
<CustomField>
    <fullName>Report_Result_Summary__c</fullName>
    <label>Report Result Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>